--- a/recipes/Ogbono_Soup.html
+++ b/recipes/Ogbono_Soup.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./recipes_style.css">
     <title>Ogbono Soup</title>
 </head>
 <body>
     <h1>Ogbono Soup</h1>
-    <p><img src="../img/ogbono.jpeg" width="300"> <br>
-        Ogbono soup is a popular Nigerian delicacy enjoyed across the country. it's a viscous soup prepared with fish and proteins and it's also served with "Swallow". it's made from the seeds of the ogbono fruit, typically dried in the sun, ground, and sold in powdered form or whole. its highly mucilaginous component thickens in soups is what most people enjoy. <br></p><br>
+    <p><img src="../img/ogbono.jpeg" width="300"> <div class="firstp"><br>
+        Ogbono soup is a popular Nigerian delicacy enjoyed across the country. it's a viscous soup prepared with fish and proteins and it's also served with "Swallow". it's made from the seeds of the ogbono fruit, typically dried in the sun, ground, and sold in powdered form or whole. its highly mucilaginous component thickens in soups is what most people enjoy. <br></p></div><br>
 
     
 
     <h3>INGREDIENTS</h3>
-    <p>Ogbono seed, ogiri okpei, stockfish head, ponmo, sharki, beef, fresh pepper or 2 tbsp. dry pepper, snails, crayfish, salt, seasoning cubes, onion, palm oil, ugu (pumpkin leaves)</p>
     <ul>
         <li>1 cup ogbono seed</li>
         <li>1 small ogiri okpei</li>
@@ -32,6 +32,7 @@
         <li>1 small bunch you (pumpkin leaves)</li>
     </ul>
     <h3>PREPARATION: </h3>
+    <div class="secondp">
     <p>
         
         Place the Ogbono and ogiri in the dry mill of your blender and grind into a smooth powder. Set this aside. Soak the stockfish in hot water and shred - Set this aside. Chop the ugu - Set this aside <br><br>
@@ -42,5 +43,6 @@ snails in the pot. Add your chopped onion, crushed seasoning, salt to taste. Cov
     <p>
         Turn down the heat from the burner and add the ogbono. Stir on very low heat for 30 secs then add the meat stock. Mix well. Add water into the pot. If you want it to be very thick, add little water. if you don't want the soup to be too thick, add water as desired. Here's the tricky part. If you're sure you're using the real ogbono, you can cover your pot. If you're using Ugiri (An ogbono substitute), DON'T COVER YOUR POT else the soup will lose its viscosity. Once the ogbono thickens, Add the crayfish and cooked proteins into the pot. Mix to combine, then add your chopped vegetables. Leave to simmer for 2 minutes on low heat then turn off your burner and your ogbono is ready. Serve with your favorite swallow. Enjoy!
     </p>
+    </div>
 </body>
 </html>
