--- a/recipes/jollof_rice.html
+++ b/recipes/jollof_rice.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./recipes_style.css">
     <title>Jollof Rice</title>
 </head>
+
 <body>
     <h1>Jollof Rice</h1>
-    <p><img src="../img/IMG_7971.jpg" width="300"> <br>
-        The chef Tunde Wey is based in New Orleans, but he was born in Nigeria, where jollof rice is a well-loved dish. The rice is cooked in a flavorful tomato and pepper purée; his version is vegan, and laced with chile heat.<br></p><br>
-
-    
+    <br>
+    <div><img src="../img/IMG_7971.jpg" width="300" alt="the photo of Jollof Rice"></div> <br>
+    <div class="firstp"><p>    The chef Tunde Wey is based in New Orleans, but he was born in Nigeria, where jollof rice is a well-loved dish. The rice is cooked in a flavorful tomato and pepper purée; his version is vegan, and laced with chile heat.<br></p><br>
+</div>
+    <br>
 
     <h3>INGREDIENTS</h3>
 
@@ -32,7 +35,8 @@
         <li>1 tablespoon dried thyme</li>
         <li>2&frac12 cups medium-grain rice</li>
     </ul>
-    <h3>PREPARATION: </h3>
+    <h3>PREPARATION</h3>
+    <div class="secondp">
     <p>
         
         In a blender, combine tomatoes, scotch bonnet pepper and onions; purée. Pour out half the purée into a bowl; set aside. Add the bell peppers to the purée remaining in the blender and pulse until smooth. Add to the mixture that was set aside and stir to combine.
@@ -43,5 +47,6 @@
         Stir in the rice until well mixed, then reduce the heat to low.
         Cover pot and let cook until rice is al dente, about 45 minutes. Check after 30 minutes; if rice is sauce-logged, remove the lid to cook off the excess sauce. If rice seems dry, stir in 1 to 2 cups water. Allow the rice at the bottom of the pot to char a bit to infuse it with a smoky flavor.
     </p>
+</div>
 </body>
 </html>
