--- a/recipes/Egusi_Soup.html
+++ b/recipes/Egusi_Soup.html
@@ -4,37 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipes_style.css">
     <title>Egusi Soup</title>
 </head>
 <body>
-    <h1>Egusi Soup</h1>
-    <p><img src="../img/Egusi-soup.image-4-600x900-e1549493472568.jpeg" width="300"><br> 
+    <h1>Egusi Soup</h1><br>
+    
+    <img src="../img/Egusi-soup.image-4-600x900-e1549493472568.jpeg" width="300"><br>
+    <div class="firstp">
+    <p>
         This Egusi soup recipe is insanely delicious and easy to make. Before you say I write this about all my recipes, I just want to confirm once again that this is true. I can tell you, this soup is the truth. It is simple and quick to make. Egusi soup is popular in Nigeria and it is best eaten with morsels or  “swallow” as it’s popularly called. Egusi soup and pounded are top of the list. Perfect food marriage the universe has ever brought together.
-<br></p><br>
+<br></p></div><br>
 
-Ground melon
-
-smoked turkey
-
-Smoked Mackerel
-
-salt
-
-Beef stock cubes
-
-Nigerian pepper mix
-
-Dried Prawns
-
-Iru woro or pete (locust beans): substitute with ogiri or omit if you do not have it
-
-Palm oil
-
-Spinach: any type of spinach can be used but I used baby spinach
-
-
-
-    <h3>INGREDIENTS</h3>
+    <h3>INGREDIENTS</h3> <br>
 
     <ul>
         <li>Ground melon</li>
@@ -48,7 +30,9 @@ Spinach: any type of spinach can be used but I used baby spinach
         <li>Palm oil</li>
         <li>Spinach</li>
     </ul>
-    <h3>PREPARATION: </h3>
+    <br>
+    <h3>PREPARATION: </h3><br>
+    <div class="secondp">
     <p>
        
         Add ground melon to a bowl, add about a cup of water and mix to form a paste then set aside. Wash and chop the spinach, drain in a colander and set aside.
@@ -57,11 +41,12 @@ Place a big pan on medium heat, add palm oil and heat for about 3 minutes (Do no
 Add pepper mix, locust beans and stir to combine. Bring to boil for 5 minutes.
 Add the egusi paste in bits to pepper, reduce the heat, do not stir and cover the pot with a lid. Cook for another 10 minutes.
 
-    </p>
+    </p><br>
     <p>
         Remove the lid, and gently stir the soup. The egusi would be lumpy at this point, use the back of a ladle to break the lumps it into desired size/texture
 Add smoked turkey, ground crayfish and crayfish, beef stock (if using) and stir to combine. Add bouillon cubes, taste and adjust accordingly. I didn’t add salt to this soup as the smoked turkey and mackerel already contained salt. Continue to cook for another 10 minutes, check at intervals and stir to avoid burning if need be
 Add shredded smoked mackerel and gently stir into the soup. Add chopped spinach, stir to combine and cook for another 3 to 5 minutes. Take it off the heat, allow to cool for about 10 minutes before serving
     </p>
+</div>
 </body>
 </html>
